<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/common_header">

        <ru.bgidilliya.strobbsdatatransfer.SummarisedEditTextPreference
            android:inputType="number"
            android:key="terminal_number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/terminal_number_title" />
        <ru.bgidilliya.strobbsdatatransfer.SummarisedEditTextPreference
            android:key="source_folder"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/source_folder_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/connect_header">

        <ru.bgidilliya.strobbsdatatransfer.SummarisedEditTextPreference
            android:key="domain"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/domain_title" />
        <ru.bgidilliya.strobbsdatatransfer.SummarisedEditTextPreference
            android:key="destination_folder"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/destination_folder_title" />
        <CheckBoxPreference
            android:key="anonymous"
            android:title="@string/anonymous_title"
            android:disableDependentsState="true" />
        <ru.bgidilliya.strobbsdatatransfer.SummarisedEditTextPreference
            android:dependency="anonymous"
            android:key="username"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/username_title" />
        <EditTextPreference
            android:dependency="anonymous"
            android:key="password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/password_title" />

    </PreferenceCategory>

</PreferenceScreen>
